--- a/index.html
+++ b/index.html
@@ -4,7 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Login</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">LOGO</header>
+
+    <main>
+      <div class="container">
+        <form action="">
+          <div class="txt">
+            <label class="sr-only" for="email">EMAIL</label>
+            <input
+              type="text"
+              id="email"
+              name="email"
+              placeholder="example@email.com"
+              required
+            />
+          </div>
+
+          <div class="txt">
+            <label class="sr-only" for="password">PASSWORD</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="password"
+              required
+            />
+          </div>
+          <div class="button">
+            <button type="submit">Enviar</button>
+          </div>
+          <div class="signup">
+            First access?
+            <a href="#">Sign up</a>
+          </div>
+        </form>
+      </div>
+    </main>
+  </body>
 </html>
