--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             />
           </div>
           <div class="button">
-            <button type="submit">Enviar</button>
+            <button type="submit">Confirm</button>
           </div>
           <div class="signup">
             First access?
