--- a/application/index.html
+++ b/application/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- STYLES -->
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Schedu.Me - Your favorite helper</title>
   </head>
@@ -16,8 +25,8 @@
         <header>
           <h1>Schedu.<strong>Me</strong></h1>
           <nav>
-            <a class="active" href="#">Inbox</a>
-            <a href="#">Flights</a>
+            <a href="#">Inbox</a>
+            <a class="active" href="#">Flights</a>
             <a href="#">To-Do</a>
             <a href="#">Meeting</a>
             <a href="#">Settings</a>
