--- a/application/index.html
+++ b/application/index.html
@@ -17,6 +17,15 @@
       rel="stylesheet"
     />
 
+    <!-- ICONS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <title>Schedu.Me - Your favorite helper</title>
   </head>
   <body>
@@ -32,16 +41,77 @@
             <a href="#">Settings</a>
           </nav>
         </header>
+
         <main>
           <h1>Pick a day</h1>
-          <div class="calendar">
-            <div class="dates">CALENDARIO VEM AQUI DENTRO</div>
-            <div class="cards">
-              <div class="location-card">Location</div>
-              <div class="date-card">Date</div>
-              <div class="quantity-card">Quantity</div>
+          <div class="container-calendar">
+            <div class="calendar">
+              <div class="month">
+                <i class="fas fa-angle-left prev"></i>
+                <div class="date">
+                  <h3>April 2021</h1>
+                </div>
+                <i class="fas fa-angle-right next"></i>
+              </div>
+
+              <div class="weekdays">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tue</div>
+                <div>Wed</div>
+                <div>Thu</div>
+                <div>Fri</div>
+                <div>Sat</div>
+              </div>
+              <div class="days">
+                <div class="prev-date">31</div>
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+                <div>10</div>
+                <div>11</div>
+                <div>12</div>
+                <div>13</div>
+                <div>14</div>
+                <div>15</div>
+                <div>16</div>
+                <div>17</div>
+                <div>18</div>
+                <div>19</div>
+                <div>20</div>
+                <div>21</div>
+                <div>22</div>
+                <div>23</div>
+                <div>24</div>
+                <div>25</div>
+                <div>26</div>
+                <div>27</div>
+                <div>28</div>
+                <div>29</div>
+                <div>30</div>
+                <div>31</div>
+                <div class="next-date">1</div>
+                <div class="next-date">2</div>
+                <div class="next-date">3</div>
+                <div class="next-date">4</div>
+                <div class="next-date">5</div>
+                <div class="next-date">6</div>
+              </div>
             </div>
           </div>
+
+          <div class="cards">
+            <div class="location-card">Location</div>
+            <div class="date-card">Date</div>
+            <div class="quantity-card">Quantity</div>
+          </div>
+
           <div class="timetable">
             <div class="text">Time Selector</div>
 
