--- a/application/index.html
+++ b/application/index.html
@@ -28,11 +28,12 @@
 
     <title>Schedu.Me - Your favorite helper</title>
   </head>
+
   <body>
     <div class="content">
       <div class="main">
         <header>
-          <h1>Schedu.<strong>Me</strong></h1>
+          <h1>Schedu.<strong class="logo">Me</strong></h1>
           <nav>
             <a href="#">Inbox</a>
             <a class="active" href="#">Flights</a>
@@ -49,7 +50,7 @@
               <div class="month">
                 <i class="fas fa-angle-left prev"></i>
                 <div class="date">
-                  <h3>April 2021</h1>
+                  <h3>April</h3>
                 </div>
                 <i class="fas fa-angle-right next"></i>
               </div>
@@ -63,49 +64,12 @@
                 <div>Fri</div>
                 <div>Sat</div>
               </div>
+
               <div class="days">
-                <div class="prev-date">31</div>
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-                <div>8</div>
-                <div>9</div>
-                <div>10</div>
-                <div>11</div>
-                <div>12</div>
-                <div>13</div>
-                <div>14</div>
-                <div>15</div>
-                <div>16</div>
-                <div>17</div>
-                <div>18</div>
-                <div>19</div>
-                <div>20</div>
-                <div>21</div>
-                <div>22</div>
-                <div>23</div>
-                <div>24</div>
-                <div>25</div>
-                <div>26</div>
-                <div>27</div>
-                <div>28</div>
-                <div>29</div>
-                <div>30</div>
-                <div>31</div>
-                <div class="next-date">1</div>
-                <div class="next-date">2</div>
-                <div class="next-date">3</div>
-                <div class="next-date">4</div>
-                <div class="next-date">5</div>
-                <div class="next-date">6</div>
+                <div></div>
               </div>
             </div>
           </div>
-
           <div class="cards">
             <div class="location-card">Location</div>
             <div class="date-card">Date</div>
@@ -122,5 +86,7 @@
       </div>
       <aside></aside>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
