POST - Cards with location, date and quantity included

--- a/application/index.html
+++ b/application/index.html
@@ -50,7 +50,7 @@
               <div class="month">
                 <i class="fas fa-angle-left prev"></i>
                 <div class="date">
-                  <h3>April</h3>
+                  <h3></h3>
                 </div>
                 <i class="fas fa-angle-right next"></i>
               </div>
@@ -71,9 +71,15 @@
             </div>
           </div>
           <div class="cards">
-            <div class="location-card">Location</div>
-            <div class="date-card">Date</div>
-            <div class="quantity-card">Quantity</div>
+            <div class="location-card">
+              Location <img src="./assets/navigation.svg" alt="" />
+            </div>
+            <div class="date-card">
+              Date <img src="./assets/calendar.svg" alt="" />
+            </div>
+            <div class="quantity-card">
+              Quantity <img src="./assets/chevron-down.svg" alt="" />
+            </div>
           </div>
 
           <div class="timetable">
