POST - Timetable section added

--- a/application/index.html
+++ b/application/index.html
@@ -83,10 +83,19 @@
           </div>
 
           <div class="timetable">
-            <div class="text">Time Selector</div>
+            <div class="text">
+              Time Selector
+              <br />
 
-            <div class="timetable-card">Timetable</div>
-            <a href="#">Configuration</a>
+              <span>Choose a time to plan your task</span>
+            </div>
+
+            <div class="timetable-card">
+              Timetable <img src="./assets/chevron-down.svg" alt="" />
+            </div>
+            <div class="config">
+              <a href="#">Configuration</a>
+            </div>
           </div>
         </main>
       </div>
